--- a/TabBarExample/TabBarExample/Base.lproj/Main.storyboard
+++ b/TabBarExample/TabBarExample/Base.lproj/Main.storyboard
@@ -88,7 +88,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="rI1-WX-e8r">
-                                <rect key="frame" x="16" y="351.5" width="382" height="193.5"/>
+                                <rect key="frame" x="16" y="341" width="382" height="214"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="info.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="F1e-Uj-eqh">
                                         <rect key="frame" x="141" y="0.5" width="100" height="99"/>
@@ -98,16 +98,16 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="1N6-67-1cE">
-                                        <rect key="frame" x="11" y="124" width="360.5" height="69.5"/>
+                                        <rect key="frame" x="44" y="124" width="294" height="90"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SwiftMovies" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BfF-Cc-I4F">
-                                                <rect key="frame" x="0.0" y="0.0" width="360.5" height="41"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="294" height="41"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="App com sinopse de filmes dividos por gêneros" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y3o-dc-udB">
-                                                <rect key="frame" x="0.0" y="49" width="360.5" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="App com sinopse de filmes separados por gêneros" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y3o-dc-udB">
+                                                <rect key="frame" x="0.0" y="49" width="294" height="41"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" systemColor="secondaryLabelColor"/>
                                                 <nil key="highlightedColor"/>
@@ -175,9 +175,9 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                             </imageView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KTh-KO-3TD">
-                                <rect key="frame" x="16" y="604" width="382" height="193"/>
+                                <rect key="frame" x="16" y="603.5" width="382" height="193.5"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ltr-Vb-4zG">
-                                    <rect key="frame" x="0.0" y="0.0" width="382" height="193"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="382" height="194"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Vf5-MZ-hCt">
